--- a/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
@@ -130,13 +130,13 @@
     "            \"How does useEffect() work?\",\n",
     "            \"What does the static keyword in a function mean?\",\n",
     "            \"What does the 'finally' block in Python do?\",\n",
-    "            \"What is the difference between multiprocessing and multithreading?\"\n",
+    "            \"What is the difference between multiprocessing and multithreading?\",\n",
     "        ],\n",
     "        \"ground_truth\": [\n",
     "            \"The useEffect() hook tells React that your component needs to do something after render. React will remember the function you passed (we’ll refer to it as our “effect”), and call it later after performing the DOM updates.\",\n",
     "            \"Static members belongs to the class, rather than a specific instance. This means that only one instance of a static member exists, even if you create multiple objects of the class, or if you don't create any. It will be shared by all objects.\",\n",
     "            \"'Finally' defines a block of code to run when the try... except...else block is final. The finally block will be executed no matter if the try block raises an error or not.\",\n",
-    "            \"Multithreading refers to the ability of a processor to execute multiple threads concurrently, where each thread runs a process. Whereas multiprocessing refers to the ability of a system to run multiple processors in parallel, where each processor can run one or more threads.\"\n",
+    "            \"Multithreading refers to the ability of a processor to execute multiple threads concurrently, where each thread runs a process. Whereas multiprocessing refers to the ability of a system to run multiple processors in parallel, where each processor can run one or more threads.\",\n",
     "        ],\n",
     "    }\n",
     ")"
@@ -272,23 +272,23 @@
    ],
    "source": [
     "with mlflow.start_run() as run:\n",
-    "  system_prompt = \"Answer the following question in two sentences\"\n",
-    "  basic_qa_model = mlflow.openai.log_model(\n",
-    "      model=\"gpt-3.5-turbo\",\n",
-    "      task=openai.ChatCompletion,\n",
-    "      artifact_path=\"model\",\n",
-    "      messages=[\n",
-    "          {\"role\": \"system\", \"content\": system_prompt},\n",
-    "          {\"role\": \"user\", \"content\": \"{question}\"},\n",
-    "      ],\n",
-    "  )\n",
-    "  results = mlflow.evaluate(\n",
-    "      basic_qa_model.model_uri,\n",
-    "      eval_df,\n",
-    "      targets=\"ground_truth\", # specify which column corresponds to the expected output\n",
-    "      model_type=\"question-answering\", # model type indicates which metrics are relevant for this task\n",
-    "      evaluators=\"default\",\n",
-    "  )\n",
+    "    system_prompt = \"Answer the following question in two sentences\"\n",
+    "    basic_qa_model = mlflow.openai.log_model(\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        task=openai.ChatCompletion,\n",
+    "        artifact_path=\"model\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
+    "        ],\n",
+    "    )\n",
+    "    results = mlflow.evaluate(\n",
+    "        basic_qa_model.model_uri,\n",
+    "        eval_df,\n",
+    "        targets=\"ground_truth\",  # specify which column corresponds to the expected output\n",
+    "        model_type=\"question-answering\",  # model type indicates which metrics are relevant for this task\n",
+    "        evaluators=\"default\",\n",
+    "    )\n",
     "results.metrics"
    ]
   },
@@ -582,21 +582,21 @@
     "\n",
     "# Create an example to describe what answer_similarity means like for this problem.\n",
     "example = EvaluationExample(\n",
-    "        input=\"What is MLflow?\",\n",
-    "        output=\"MLflow is an open-source platform for managing machine \"\n",
-    "        \"learning workflows, including experiment tracking, model packaging, \"\n",
-    "        \"versioning, and deployment, simplifying the ML lifecycle.\",\n",
-    "        score=4,\n",
-    "        justification=\"The definition effectively explains what MLflow is \"\n",
-    "        \"its purpose, and its developer. It could be more concise for a 5-score.\",\n",
-    "        grading_context={\n",
-    "            \"ground_truth\": \"MLflow is an open-source platform for managing \"\n",
-    "            \"the end-to-end machine learning (ML) lifecycle. It was developed by Databricks, \"\n",
-    "            \"a company that specializes in big data and machine learning solutions. MLflow is \"\n",
-    "            \"designed to address the challenges that data scientists and machine learning \"\n",
-    "            \"engineers face when developing, training, and deploying machine learning models.\"\n",
-    "        },\n",
-    "    )\n",
+    "    input=\"What is MLflow?\",\n",
+    "    output=\"MLflow is an open-source platform for managing machine \"\n",
+    "    \"learning workflows, including experiment tracking, model packaging, \"\n",
+    "    \"versioning, and deployment, simplifying the ML lifecycle.\",\n",
+    "    score=4,\n",
+    "    justification=\"The definition effectively explains what MLflow is \"\n",
+    "    \"its purpose, and its developer. It could be more concise for a 5-score.\",\n",
+    "    grading_context={\n",
+    "        \"ground_truth\": \"MLflow is an open-source platform for managing \"\n",
+    "        \"the end-to-end machine learning (ML) lifecycle. It was developed by Databricks, \"\n",
+    "        \"a company that specializes in big data and machine learning solutions. MLflow is \"\n",
+    "        \"designed to address the challenges that data scientists and machine learning \"\n",
+    "        \"engineers face when developing, training, and deploying machine learning models.\"\n",
+    "    },\n",
+    ")\n",
     "\n",
     "# Construct the metric using OpenAI GPT-4 as the judge\n",
     "answer_similarity_metric = answer_similarity(model=\"openai:/gpt-4\", examples=[example])\n",
@@ -723,7 +723,7 @@
     "        targets=\"ground_truth\",\n",
     "        model_type=\"question-answering\",\n",
     "        evaluators=\"default\",\n",
-    "        extra_metrics=[answer_similarity_metric] # use the answer similarity metric created above\n",
+    "        extra_metrics=[answer_similarity_metric],  # use the answer similarity metric created above\n",
     "    )\n",
     "results.metrics"
    ]
@@ -1024,36 +1024,37 @@
     "from mlflow.metrics import EvaluationExample, make_genai_metric\n",
     "\n",
     "professionalism_metric = make_genai_metric(\n",
-    "  name=\"professionalism\",\n",
-    "  definition=(\n",
-    "      \"Professionalism refers to the use of a formal, respectful, and appropriate style of communication that is tailored to the context and audience. It often involves avoiding overly casual language, slang, or colloquialisms, and instead using clear, concise, and respectful language\"\n",
-    "  ),\n",
-    "  grading_prompt=(\n",
-    "      \"Professionalism: If the answer is written using a professional tone, below \"\n",
-    "      \"are the details for different scores: \"\n",
-    "      \"- Score 1: Language is extremely casual, informal, and may include slang or colloquialisms. Not suitable for professional contexts.\"\n",
-    "      \"- Score 2: Language is casual but generally respectful and avoids strong informality or slang. Acceptable in some informal professional settings.\"\n",
-    "      \"- Score 3: Language is balanced and avoids extreme informality or formality. Suitable for most professional contexts. \"\n",
-    "      \"- Score 4: Language is noticeably formal, respectful, and avoids casual elements. Appropriate for business or academic settings. \"\n",
-    "      \"- Score 5: Language is excessively formal, respectful, and avoids casual elements. Appropriate for the most formal settings such as textbooks. \"\n",
-    "  ),\n",
-    "  examples=[EvaluationExample(\n",
-    "  input=\"What is MLflow?\",\n",
-    "  output=(\n",
-    "      \"MLflow is like your friendly neighborhood toolkit for managing your machine learning projects. It helps you track experiments, package your code and models, and collaborate with your team, making the whole ML workflow smoother. It's like your Swiss Army knife for machine learning!\"\n",
-    "  ),\n",
-    "  score=2,\n",
-    "  justification=(\n",
-    "      \"The response is written in a casual tone. It uses contractions, filler words such as 'like', and exclamation points, which make it sound less professional. \"\n",
-    "  ),\n",
-    ")\n",
-    "],\n",
-    "  version=\"v1\",\n",
-    "  model=\"openai:/gpt-4\",\n",
-    "  parameters={\"temperature\": 0.0},\n",
-    "  grading_context_columns=[],\n",
-    "  aggregations=[\"mean\", \"variance\", \"p90\"],\n",
-    "  greater_is_better=True,\n",
+    "    name=\"professionalism\",\n",
+    "    definition=(\n",
+    "        \"Professionalism refers to the use of a formal, respectful, and appropriate style of communication that is tailored to the context and audience. It often involves avoiding overly casual language, slang, or colloquialisms, and instead using clear, concise, and respectful language\"\n",
+    "    ),\n",
+    "    grading_prompt=(\n",
+    "        \"Professionalism: If the answer is written using a professional tone, below \"\n",
+    "        \"are the details for different scores: \"\n",
+    "        \"- Score 1: Language is extremely casual, informal, and may include slang or colloquialisms. Not suitable for professional contexts.\"\n",
+    "        \"- Score 2: Language is casual but generally respectful and avoids strong informality or slang. Acceptable in some informal professional settings.\"\n",
+    "        \"- Score 3: Language is balanced and avoids extreme informality or formality. Suitable for most professional contexts. \"\n",
+    "        \"- Score 4: Language is noticeably formal, respectful, and avoids casual elements. Appropriate for business or academic settings. \"\n",
+    "        \"- Score 5: Language is excessively formal, respectful, and avoids casual elements. Appropriate for the most formal settings such as textbooks. \"\n",
+    "    ),\n",
+    "    examples=[\n",
+    "        EvaluationExample(\n",
+    "            input=\"What is MLflow?\",\n",
+    "            output=(\n",
+    "                \"MLflow is like your friendly neighborhood toolkit for managing your machine learning projects. It helps you track experiments, package your code and models, and collaborate with your team, making the whole ML workflow smoother. It's like your Swiss Army knife for machine learning!\"\n",
+    "            ),\n",
+    "            score=2,\n",
+    "            justification=(\n",
+    "                \"The response is written in a casual tone. It uses contractions, filler words such as 'like', and exclamation points, which make it sound less professional. \"\n",
+    "            ),\n",
+    "        )\n",
+    "    ],\n",
+    "    version=\"v1\",\n",
+    "    model=\"openai:/gpt-4\",\n",
+    "    parameters={\"temperature\": 0.0},\n",
+    "    grading_context_columns=[],\n",
+    "    aggregations=[\"mean\", \"variance\", \"p90\"],\n",
+    "    greater_is_better=True,\n",
     ")\n",
     "\n",
     "print(professionalism_metric)"
@@ -1177,7 +1178,7 @@
     "        eval_df,\n",
     "        model_type=\"question-answering\",\n",
     "        evaluators=\"default\",\n",
-    "        extra_metrics=[professionalism_metric] # use the professionalism metric we created above\n",
+    "        extra_metrics=[professionalism_metric],  # use the professionalism metric we created above\n",
     "    )\n",
     "print(results.metrics)"
    ]
@@ -1495,23 +1496,23 @@
    ],
    "source": [
     "with mlflow.start_run() as run:\n",
-    "  system_prompt = \"Answer the following question using extreme formality.\"\n",
-    "  professional_qa_model = mlflow.openai.log_model(\n",
-    "      model=\"gpt-3.5-turbo\",\n",
-    "      task=openai.ChatCompletion,\n",
-    "      artifact_path=\"model\",\n",
-    "      messages=[\n",
-    "          {\"role\": \"system\", \"content\": system_prompt},\n",
-    "          {\"role\": \"user\", \"content\": \"{question}\"},\n",
-    "      ],\n",
-    "  )\n",
-    "  results = mlflow.evaluate(\n",
-    "      professional_qa_model.model_uri,\n",
-    "      eval_df,\n",
-    "      model_type=\"question-answering\",\n",
-    "      evaluators=\"default\",\n",
-    "      extra_metrics=[professionalism_metric]\n",
-    "  )\n",
+    "    system_prompt = \"Answer the following question using extreme formality.\"\n",
+    "    professional_qa_model = mlflow.openai.log_model(\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        task=openai.ChatCompletion,\n",
+    "        artifact_path=\"model\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
+    "        ],\n",
+    "    )\n",
+    "    results = mlflow.evaluate(\n",
+    "        professional_qa_model.model_uri,\n",
+    "        eval_df,\n",
+    "        model_type=\"question-answering\",\n",
+    "        evaluators=\"default\",\n",
+    "        extra_metrics=[professionalism_metric],\n",
+    "    )\n",
     "print(results.metrics)"
    ]
   },
