order of import
Signed-off-by: Prithvi Kannan <prithvi.kannan@databricks.com>

--- a/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
@@ -18,31 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fb946228-62fb-4d68-9732-75935c9cb401",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "import pandas as pd\n",
-    "\n",
-    "import mlflow"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -67,6 +42,26 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "fb946228-62fb-4d68-9732-75935c9cb401",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "bec25067-224d-4ee8-9b5d-0beeb6cde684",
      "showTitle": false,
      "title": ""
@@ -75,6 +70,18 @@
    "outputs": [],
    "source": [
     "os.environ[\"OPENAI_API_KEY\"] = \"redacted\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "import pandas as pd\n",
+    "\n",
+    "import mlflow"
    ]
   },
   {
