replace relevance with faithfulness
Signed-off-by: Ann Zhang <ann.zhang@databricks.com>

--- a/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
@@ -290,9 +290,9 @@
    },
    "outputs": [],
    "source": [
-    "from mlflow.metrics.genai.metric_definitions import relevance\n",
+    "from mlflow.metrics.genai.metric_definitions import faithfulness\n",
     "\n",
-    "relevance_metric = relevance(model=\"openai:/gpt-4\")"
+    "faithfulness_metric = faithfulness(model=\"openai:/gpt-4\")"
    ]
   },
   {
@@ -372,7 +372,7 @@
     "    model_type=\"question-answering\",\n",
     "    evaluators=\"default\",\n",
     "    predictions=\"result\",\n",
-    "    extra_metrics=[relevance_metric, mlflow.metrics.latency()],\n",
+    "    extra_metrics=[faithfulness_metric, mlflow.metrics.latency()],\n",
     "    evaluator_config={\n",
     "        \"col_mapping\": {\n",
     "            \"inputs\": \"questions\",\n",
