run through notebook
Signed-off-by: Ann Zhang <ann.zhang@databricks.com>

--- a/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -270,12 +270,12 @@
     }
    },
    "source": [
-    "Create a relevance metric"
+    "Create a faithfulness metric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -315,26 +315,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/20 13:50:31 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
+      "2023/10/23 13:08:30 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
-      "2023/10/20 13:50:38 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: token_count\n",
-      "2023/10/20 13:50:38 INFO mlflow.metrics.metric_definitions: Computing token count metric:\n",
-      "2023/10/20 13:50:38 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: toxicity\n",
-      "2023/10/20 13:50:38 INFO mlflow.metrics.metric_definitions: Loading toxicity metric:\n",
-      "2023/10/20 13:50:38 INFO mlflow.metrics.metric_definitions: Computing toxicity metric:\n",
-      "2023/10/20 13:50:39 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: perplexity\n",
-      "2023/10/20 13:50:39 INFO mlflow.metrics.metric_definitions: Loading perplexity metric:\n",
-      "2023/10/20 13:50:39 INFO mlflow.metrics.metric_definitions: Computing perplexity metric:\n",
       "Using pad_token, but it is not set yet.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a85dd3a9e9b84b71a61b5699b06a2775",
+       "model_id": "9f8c3f22b6df4bd5b58dc27216bcbdba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,19 +341,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/20 13:50:42 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: flesch_kincaid_grade_level\n",
-      "2023/10/20 13:50:42 INFO mlflow.metrics.metric_definitions: Computing flesch kincaid metric:\n",
-      "2023/10/20 13:50:42 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: ari_grade_level\n",
-      "2023/10/20 13:50:42 INFO mlflow.metrics.metric_definitions: Computing automated readability index metric:\n",
-      "2023/10/20 13:50:42 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: exact_match\n",
-      "2023/10/20 13:50:42 INFO mlflow.models.evaluation.default_evaluator: Evaluating metrics: relevance\n"
+      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: token_count\n",
+      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: toxicity\n",
+      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: perplexity\n",
+      "Using pad_token, but it is not set yet.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6782469c579342f3b53aa4bd4845dff2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: flesch_kincaid_grade_level\n",
+      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: ari_grade_level\n",
+      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: exact_match\n",
+      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating metrics: faithfulness\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'toxicity/v1/mean': 0.00018985224596690387, 'toxicity/v1/variance': 2.445330018924171e-09, 'toxicity/v1/p90': 0.0002462980875861831, 'toxicity/v1/ratio': 0.0, 'perplexity/v1/mean': 66.7759838104248, 'perplexity/v1/variance': 5395.569382352918, 'perplexity/v1/p90': 144.32936973571782, 'flesch_kincaid_grade_level/v1/mean': 8.0, 'flesch_kincaid_grade_level/v1/variance': 21.705000000000002, 'flesch_kincaid_grade_level/v1/p90': 12.910000000000002, 'ari_grade_level/v1/mean': 9.55, 'ari_grade_level/v1/variance': 29.762499999999992, 'ari_grade_level/v1/p90': 15.540000000000001, 'relevance/v1/mean': 5.0, 'relevance/v1/variance': 0.0, 'relevance/v1/p90': 5.0}\n"
+      "{'toxicity/v1/mean': 0.00029461702433764003, 'toxicity/v1/variance': 2.590235813445182e-08, 'toxicity/v1/p90': 0.0004734034562716261, 'toxicity/v1/ratio': 0.0, 'perplexity/v1/mean': 64.24051403999329, 'perplexity/v1/variance': 5634.754386745301, 'perplexity/v1/p90': 144.32936973571782, 'flesch_kincaid_grade_level/v1/mean': 8.2, 'flesch_kincaid_grade_level/v1/variance': 21.465000000000003, 'flesch_kincaid_grade_level/v1/p90': 13.150000000000002, 'ari_grade_level/v1/mean': 9.825000000000001, 'ari_grade_level/v1/variance': 28.971874999999994, 'ari_grade_level/v1/p90': 15.870000000000001, 'faithfulness/v1/mean': 3.0, 'faithfulness/v1/variance': 4.0, 'faithfulness/v1/p90': 5.0}\n"
      ]
     }
    ],
@@ -385,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -399,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a13f4f914644a94934caf43e1e9dec8",
+       "model_id": "56fc1dc6455847e08d21d43de97f40e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,8 +455,8 @@
        "      <th>perplexity/v1/score</th>\n",
        "      <th>flesch_kincaid_grade_level/v1/score</th>\n",
        "      <th>ari_grade_level/v1/score</th>\n",
-       "      <th>relevance/v1/score</th>\n",
-       "      <th>relevance/v1/justification</th>\n",
+       "      <th>faithfulness/v1/score</th>\n",
+       "      <th>faithfulness/v1/justification</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -452,14 +466,14 @@
        "      <td>MLflow is an open source platform for managin...</td>\n",
        "      <td>What is MLflow?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>4.571291</td>\n",
+       "      <td>43.081868</td>\n",
        "      <td>176</td>\n",
        "      <td>0.000208</td>\n",
        "      <td>28.626591</td>\n",
        "      <td>15.4</td>\n",
        "      <td>18.9</td>\n",
        "      <td>5</td>\n",
-       "      <td>The output provides a comprehensive answer to ...</td>\n",
+       "      <td>The output provided by the model is a detailed...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -467,29 +481,29 @@
        "      <td>You can use the Mlflow.evaluate() function to...</td>\n",
        "      <td>How to run Mlflow.evalaute()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>1.253230</td>\n",
+       "      <td>12.276777</td>\n",
        "      <td>48</td>\n",
        "      <td>0.000263</td>\n",
        "      <td>21.149670</td>\n",
        "      <td>7.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The output provides a comprehensive answer to ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The output claims that \"You can use the Mlflow...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>How to log_table()?</td>\n",
-       "      <td>log_table() is a function that is part of the...</td>\n",
+       "      <td>\\n\\nYou can use the log_table() function in ML...</td>\n",
        "      <td>How to log_table()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>1.217061</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0.000145</td>\n",
-       "      <td>23.411400</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>The output provides a comprehensive answer to ...</td>\n",
+       "      <td>3.033565</td>\n",
+       "      <td>114</td>\n",
+       "      <td>0.000564</td>\n",
+       "      <td>13.269521</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The output provides a detailed explanation of ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -497,14 +511,14 @@
        "      <td>load_table() is not a function in MLflow.</td>\n",
        "      <td>How to load_table()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>0.680665</td>\n",
+       "      <td>4.115470</td>\n",
        "      <td>11</td>\n",
        "      <td>0.000144</td>\n",
        "      <td>193.916275</td>\n",
        "      <td>2.5</td>\n",
        "      <td>5.6</td>\n",
        "      <td>5</td>\n",
-       "      <td>The output directly and accurately answers the...</td>\n",
+       "      <td>The output states that \"load_table() is not a ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -520,7 +534,7 @@
        "                                             outputs  \\\n",
        "0   MLflow is an open source platform for managin...   \n",
        "1   You can use the Mlflow.evaluate() function to...   \n",
-       "2   log_table() is a function that is part of the...   \n",
+       "2  \\n\\nYou can use the log_table() function in ML...   \n",
        "3          load_table() is not a function in MLflow.   \n",
        "\n",
        "                           query  \\\n",
@@ -529,32 +543,32 @@
        "2            How to log_table()?   \n",
        "3           How to load_table()?   \n",
        "\n",
-       "                                    source_documents   latency  token_count  \\\n",
-       "0  [{'lc_attributes': {}, 'lc_namespace': ['langc...  4.571291          176   \n",
-       "1  [{'lc_attributes': {}, 'lc_namespace': ['langc...  1.253230           48   \n",
-       "2  [{'lc_attributes': {}, 'lc_namespace': ['langc...  1.217061           47   \n",
-       "3  [{'lc_attributes': {}, 'lc_namespace': ['langc...  0.680665           11   \n",
+       "                                    source_documents    latency  token_count  \\\n",
+       "0  [{'lc_attributes': {}, 'lc_namespace': ['langc...  43.081868          176   \n",
+       "1  [{'lc_attributes': {}, 'lc_namespace': ['langc...  12.276777           48   \n",
+       "2  [{'lc_attributes': {}, 'lc_namespace': ['langc...   3.033565          114   \n",
+       "3  [{'lc_attributes': {}, 'lc_namespace': ['langc...   4.115470           11   \n",
        "\n",
        "   toxicity/v1/score  perplexity/v1/score  \\\n",
        "0           0.000208            28.626591   \n",
        "1           0.000263            21.149670   \n",
-       "2           0.000145            23.411400   \n",
+       "2           0.000564            13.269521   \n",
        "3           0.000144           193.916275   \n",
        "\n",
        "   flesch_kincaid_grade_level/v1/score  ari_grade_level/v1/score  \\\n",
        "0                                 15.4                      18.9   \n",
        "1                                  7.0                       6.0   \n",
-       "2                                  7.1                       7.7   \n",
+       "2                                  7.9                       8.8   \n",
        "3                                  2.5                       5.6   \n",
        "\n",
-       "   relevance/v1/score                         relevance/v1/justification  \n",
-       "0                   5  The output provides a comprehensive answer to ...  \n",
-       "1                   5  The output provides a comprehensive answer to ...  \n",
-       "2                   5  The output provides a comprehensive answer to ...  \n",
-       "3                   5  The output directly and accurately answers the...  "
+       "   faithfulness/v1/score                      faithfulness/v1/justification  \n",
+       "0                      5  The output provided by the model is a detailed...  \n",
+       "1                      1  The output claims that \"You can use the Mlflow...  \n",
+       "2                      1  The output provides a detailed explanation of ...  \n",
+       "3                      5  The output states that \"load_table() is not a ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
