--- a/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -250,7 +250,7 @@
     "    {\n",
     "        \"questions\": [\n",
     "            \"What is MLflow?\",\n",
-    "            \"How to run Mlflow.evalaute()?\",\n",
+    "            \"How to run Mlflow.evaluate()?\",\n",
     "            \"How to log_table()?\",\n",
     "            \"How to load_table()?\",\n",
     "        ],\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -315,7 +315,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/23 13:08:30 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
+      "2023/10/23 13:13:16 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
       "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
@@ -326,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f8c3f22b6df4bd5b58dc27216bcbdba",
+       "model_id": "23e9a5f58f1b4930ac47c88259156e1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -341,16 +347,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: token_count\n",
-      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: toxicity\n",
-      "2023/10/23 13:09:47 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: perplexity\n",
+      "2023/10/23 13:13:41 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: token_count\n",
+      "2023/10/23 13:13:41 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: toxicity\n",
+      "2023/10/23 13:13:41 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: perplexity\n",
       "Using pad_token, but it is not set yet.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6782469c579342f3b53aa4bd4845dff2",
+       "model_id": "2c6fd2067bad4404ad5550d56e23407e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,17 +371,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: flesch_kincaid_grade_level\n",
-      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: ari_grade_level\n",
-      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: exact_match\n",
-      "2023/10/23 13:09:50 INFO mlflow.models.evaluation.default_evaluator: Evaluating metrics: faithfulness\n"
+      "2023/10/23 13:13:44 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: flesch_kincaid_grade_level\n",
+      "2023/10/23 13:13:44 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: ari_grade_level\n",
+      "2023/10/23 13:13:44 INFO mlflow.models.evaluation.default_evaluator: Evaluating builtin metrics: exact_match\n",
+      "2023/10/23 13:13:44 INFO mlflow.models.evaluation.default_evaluator: Evaluating metrics: faithfulness\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'toxicity/v1/mean': 0.00029461702433764003, 'toxicity/v1/variance': 2.590235813445182e-08, 'toxicity/v1/p90': 0.0004734034562716261, 'toxicity/v1/ratio': 0.0, 'perplexity/v1/mean': 64.24051403999329, 'perplexity/v1/variance': 5634.754386745301, 'perplexity/v1/p90': 144.32936973571782, 'flesch_kincaid_grade_level/v1/mean': 8.2, 'flesch_kincaid_grade_level/v1/variance': 21.465000000000003, 'flesch_kincaid_grade_level/v1/p90': 13.150000000000002, 'ari_grade_level/v1/mean': 9.825000000000001, 'ari_grade_level/v1/variance': 28.971874999999994, 'ari_grade_level/v1/p90': 15.870000000000001, 'faithfulness/v1/mean': 3.0, 'faithfulness/v1/variance': 4.0, 'faithfulness/v1/p90': 5.0}\n"
+      "{'toxicity/v1/mean': 0.0002736186215770431, 'toxicity/v1/variance': 2.856656765360073e-08, 'toxicity/v1/p90': 0.0004570253004203551, 'toxicity/v1/ratio': 0.0, 'perplexity/v1/mean': 70.08646988868713, 'perplexity/v1/variance': 5233.465638493719, 'perplexity/v1/p90': 149.10144042968753, 'flesch_kincaid_grade_level/v1/mean': 7.625, 'flesch_kincaid_grade_level/v1/variance': 23.836875, 'flesch_kincaid_grade_level/v1/p90': 13.150000000000002, 'ari_grade_level/v1/mean': 9.450000000000001, 'ari_grade_level/v1/variance': 32.262499999999996, 'ari_grade_level/v1/p90': 15.870000000000001, 'faithfulness/v1/mean': 4.0, 'faithfulness/v1/variance': 3.0, 'faithfulness/v1/p90': 5.0}\n"
      ]
     }
    ],
@@ -399,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -413,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56fc1dc6455847e08d21d43de97f40e3",
+       "model_id": "4a4883be06c94983a171da51d14b40a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +472,7 @@
        "      <td>MLflow is an open source platform for managin...</td>\n",
        "      <td>What is MLflow?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>43.081868</td>\n",
+       "      <td>3.970739</td>\n",
        "      <td>176</td>\n",
        "      <td>0.000208</td>\n",
        "      <td>28.626591</td>\n",
@@ -477,18 +483,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How to run Mlflow.evalaute()?</td>\n",
-       "      <td>You can use the Mlflow.evaluate() function to...</td>\n",
-       "      <td>How to run Mlflow.evalaute()?</td>\n",
+       "      <td>How to run Mlflow.evaluate()?</td>\n",
+       "      <td>\\n\\nYou can run Mlflow.evaluate() by using the...</td>\n",
+       "      <td>How to run Mlflow.evaluate()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>12.276777</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.000263</td>\n",
-       "      <td>21.149670</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>The output claims that \"You can use the Mlflow...</td>\n",
+       "      <td>1.083653</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.000179</td>\n",
+       "      <td>44.533493</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The output states that \"You can run Mlflow.eva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -496,7 +502,7 @@
        "      <td>\\n\\nYou can use the log_table() function in ML...</td>\n",
        "      <td>How to log_table()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>3.033565</td>\n",
+       "      <td>2.833117</td>\n",
        "      <td>114</td>\n",
        "      <td>0.000564</td>\n",
        "      <td>13.269521</td>\n",
@@ -511,7 +517,7 @@
        "      <td>load_table() is not a function in MLflow.</td>\n",
        "      <td>How to load_table()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
-       "      <td>4.115470</td>\n",
+       "      <td>3.736170</td>\n",
        "      <td>11</td>\n",
        "      <td>0.000144</td>\n",
        "      <td>193.916275</td>\n",
@@ -527,48 +533,48 @@
       "text/plain": [
        "                       questions  \\\n",
        "0                What is MLflow?   \n",
-       "1  How to run Mlflow.evalaute()?   \n",
+       "1  How to run Mlflow.evaluate()?   \n",
        "2            How to log_table()?   \n",
        "3           How to load_table()?   \n",
        "\n",
        "                                             outputs  \\\n",
        "0   MLflow is an open source platform for managin...   \n",
-       "1   You can use the Mlflow.evaluate() function to...   \n",
+       "1  \\n\\nYou can run Mlflow.evaluate() by using the...   \n",
        "2  \\n\\nYou can use the log_table() function in ML...   \n",
        "3          load_table() is not a function in MLflow.   \n",
        "\n",
        "                           query  \\\n",
        "0                What is MLflow?   \n",
-       "1  How to run Mlflow.evalaute()?   \n",
+       "1  How to run Mlflow.evaluate()?   \n",
        "2            How to log_table()?   \n",
        "3           How to load_table()?   \n",
        "\n",
-       "                                    source_documents    latency  token_count  \\\n",
-       "0  [{'lc_attributes': {}, 'lc_namespace': ['langc...  43.081868          176   \n",
-       "1  [{'lc_attributes': {}, 'lc_namespace': ['langc...  12.276777           48   \n",
-       "2  [{'lc_attributes': {}, 'lc_namespace': ['langc...   3.033565          114   \n",
-       "3  [{'lc_attributes': {}, 'lc_namespace': ['langc...   4.115470           11   \n",
+       "                                    source_documents   latency  token_count  \\\n",
+       "0  [{'lc_attributes': {}, 'lc_namespace': ['langc...  3.970739          176   \n",
+       "1  [{'lc_attributes': {}, 'lc_namespace': ['langc...  1.083653           39   \n",
+       "2  [{'lc_attributes': {}, 'lc_namespace': ['langc...  2.833117          114   \n",
+       "3  [{'lc_attributes': {}, 'lc_namespace': ['langc...  3.736170           11   \n",
        "\n",
        "   toxicity/v1/score  perplexity/v1/score  \\\n",
        "0           0.000208            28.626591   \n",
-       "1           0.000263            21.149670   \n",
+       "1           0.000179            44.533493   \n",
        "2           0.000564            13.269521   \n",
        "3           0.000144           193.916275   \n",
        "\n",
        "   flesch_kincaid_grade_level/v1/score  ari_grade_level/v1/score  \\\n",
        "0                                 15.4                      18.9   \n",
-       "1                                  7.0                       6.0   \n",
+       "1                                  4.7                       4.5   \n",
        "2                                  7.9                       8.8   \n",
        "3                                  2.5                       5.6   \n",
        "\n",
        "   faithfulness/v1/score                      faithfulness/v1/justification  \n",
        "0                      5  The output provided by the model is a detailed...  \n",
-       "1                      1  The output claims that \"You can use the Mlflow...  \n",
+       "1                      5  The output states that \"You can run Mlflow.eva...  \n",
        "2                      1  The output provides a detailed explanation of ...  \n",
        "3                      5  The output states that \"load_table() is not a ...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
