--- a/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
@@ -585,7 +585,7 @@
     }
    ],
    "source": [
-    "from mlflow.metrics import EvaluationExample, answer_similarity\n",
+    "from mlflow.metrics.genai import EvaluationExample, answer_similarity\n",
     "\n",
     "# Create an example to describe what answer_similarity means like for this problem.\n",
     "example = EvaluationExample(\n",
@@ -1028,7 +1028,7 @@
     }
    ],
    "source": [
-    "from mlflow.metrics import EvaluationExample, make_genai_metric\n",
+    "from mlflow.metrics.genai import EvaluationExample, make_genai_metric\n",
     "\n",
     "professionalism_metric = make_genai_metric(\n",
     "    name=\"professionalism\",\n",
