--- a/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
+++ b/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
@@ -1028,7 +1028,7 @@
     }
    ],
    "source": [
-    "from mlflow.metrics import EvaluationExample, make_genai_metric\n",
+    "from mlflow.metrics.genai import EvaluationExample, make_genai_metric\n",
     "\n",
     "professionalism_metric = make_genai_metric(\n",
     "    name=\"professionalism\",\n",
