--- a/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
+++ b/docs/source/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
@@ -585,7 +585,7 @@
     }
    ],
    "source": [
-    "from mlflow.metrics import EvaluationExample, answer_similarity\n",
+    "from mlflow.metrics.genai import EvaluationExample, answer_similarity\n",
     "\n",
     "# Create an example to describe what answer_similarity means like for this problem.\n",
     "example = EvaluationExample(\n",
