--- a/docs/source/llms/llm-evaluate/notebooks/rag-evaluation.ipynb
+++ b/docs/source/llms/llm-evaluate/notebooks/rag-evaluation.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"redacted\""
    ]
   },
   {
