--- a/docs/source/llms/rag/notebooks/question-generation-retrieval-evaluation.ipynb
+++ b/docs/source/llms/rag/notebooks/question-generation-retrieval-evaluation.ipynb
@@ -281,7 +281,7 @@
    },
    "source": [
     "## Step 4: Get Document Data\n",
-    "We scrape the documents from the Mlflow website to use to generate questions."
+    "We scrape the documents from the MLflow website to use to generate questions."
    ]
   },
   {
@@ -1069,7 +1069,7 @@
     }
    },
    "source": [
-    "We append 5 benchmark queries to help visualize how diverse the questions are. The first four of these questions are semantically similar and all asking about Mlflow, while the last is different and refers to spark and model registry."
+    "We append 5 benchmark queries to help visualize how diverse the questions are. The first four of these questions are semantically similar and all asking about MLflow, while the last is different and refers to spark and model registry."
    ]
   },
   {
@@ -1125,9 +1125,9 @@
    "source": [
     "benchmark_questions = [\n",
     "    \"What is MLflow?\",\n",
-    "    \"What is Mlflow about?\",\n",
-    "    \"Tell me about Mlflow Tracking\",\n",
-    "    \"How does Mlflow work?\",\n",
+    "    \"What is MLflow about?\",\n",
+    "    \"Tell me about MLflow Tracking\",\n",
+    "    \"How does MLflow work?\",\n",
     "    \"How is spark used in model registry?\",\n",
     "]\n",
     "questions_to_embed = questions_to_embed + benchmark_questions"
