--- a/examples/evaluation/rag-evaluation.ipynb
+++ b/examples/evaluation/rag-evaluation.ipynb
@@ -250,7 +250,7 @@
     "    {\n",
     "        \"questions\": [\n",
     "            \"What is MLflow?\",\n",
-    "            \"How to run Mlflow.evaluate()?\",\n",
+    "            \"How to run MLflow.evaluate()?\",\n",
     "            \"How to log_table()?\",\n",
     "            \"How to load_table()?\",\n",
     "        ],\n",
@@ -483,9 +483,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How to run Mlflow.evaluate()?</td>\n",
-       "      <td>\\n\\nYou can run Mlflow.evaluate() by using the...</td>\n",
-       "      <td>How to run Mlflow.evaluate()?</td>\n",
+       "      <td>How to run MLflow.evaluate()?</td>\n",
+       "      <td>\\n\\nYou can run MLflow.evaluate() by using the...</td>\n",
+       "      <td>How to run MLflow.evaluate()?</td>\n",
        "      <td>[{'lc_attributes': {}, 'lc_namespace': ['langc...</td>\n",
        "      <td>1.083653</td>\n",
        "      <td>39</td>\n",
@@ -494,7 +494,7 @@
        "      <td>4.7</td>\n",
        "      <td>4.5</td>\n",
        "      <td>5</td>\n",
-       "      <td>The output states that \"You can run Mlflow.eva...</td>\n",
+       "      <td>The output states that \"You can run MLflow.eva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -533,19 +533,19 @@
       "text/plain": [
        "                       questions  \\\n",
        "0                What is MLflow?   \n",
-       "1  How to run Mlflow.evaluate()?   \n",
+       "1  How to run MLflow.evaluate()?   \n",
        "2            How to log_table()?   \n",
        "3           How to load_table()?   \n",
        "\n",
        "                                             outputs  \\\n",
        "0   MLflow is an open source platform for managin...   \n",
-       "1  \\n\\nYou can run Mlflow.evaluate() by using the...   \n",
+       "1  \\n\\nYou can run MLflow.evaluate() by using the...   \n",
        "2  \\n\\nYou can use the log_table() function in ML...   \n",
        "3          load_table() is not a function in MLflow.   \n",
        "\n",
        "                           query  \\\n",
        "0                What is MLflow?   \n",
-       "1  How to run Mlflow.evaluate()?   \n",
+       "1  How to run MLflow.evaluate()?   \n",
        "2            How to log_table()?   \n",
        "3           How to load_table()?   \n",
        "\n",
@@ -569,7 +569,7 @@
        "\n",
        "   faithfulness/v1/score                      faithfulness/v1/justification  \n",
        "0                      5  The output provided by the model is a detailed...  \n",
-       "1                      5  The output states that \"You can run Mlflow.eva...  \n",
+       "1                      5  The output states that \"You can run MLflow.eva...  \n",
        "2                      1  The output provides a detailed explanation of ...  \n",
        "3                      5  The output states that \"load_table() is not a ...  "
       ]
