--- a/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
+++ b/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implement our MLFlow training loop, and save our best model to the tracking server."
+    "### Implement our MLflow training loop, and save our best model to the tracking server."
    ]
   },
   {
@@ -134,7 +134,7 @@
     "mlflow.set_tracking_uri(uri=\"sqlite:////tmp/mlflow-db.sqlite\")\n",
     "mlflow.set_experiment(experiment_name)\n",
     "\n",
-    "with mlflow.start_run(run_name=\"(Notebook) RAPIDS-MLFlow\"):\n",
+    "with mlflow.start_run(run_name=\"(Notebook) RAPIDS-MLflow\"):\n",
     "    model, signature = train(fpath, max_depth, max_features, n_estimators)\n",
     "\n",
     "    mlflow.sklearn.log_model(\n",
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Begin serving our trained model using MLFlow\n",
+    "### Begin serving our trained model using MLflow\n",
     "**Note:** The serving thread will continue to run after cell execution. Select the cell and click 'interrupt the kernel' to stop it."
    ]
   },
